# cookiecutter-streamlit

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_prompt.py
{{cookiecutter.project_slug}}/: Dockerfile  LICENSE_APACHE.txt  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.streamlit/: config.toml
