[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
    {name = "{{ cookiecutter.author}}", email = "{{ cookiecutter.author_email }}"},
]
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
license = "Apache-2.0"
license_files = "LICEN[CS]E"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0"
]

